--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -15,9 +15,9 @@ filegroup(
     srcs = [
         ":wrappers/clang",
         "@org_cloudabi_cloudlibc//src/include",
+        "@org_llvm_cfe//:clang_headers",
         "@org_llvm_libcxx//:libcxx_headers",
         "@org_llvm_llvm_x86_64_unknown_freebsd//:bin/clang-7",
-        "@org_llvm_llvm_x86_64_unknown_freebsd//:clang_headers",
     ],
 )
 
