--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,9 +1,10 @@
 cc_toolchain_suite(
     name = "toolchain",
     toolchains = {
-        "x86_64-unknown-cloudabi|clang": ":cc-compiler-x86_64-unknown-cloudabi",
-        "darwin|clang": "cc-compiler-x86_64-apple-darwin",
-        "freebsd|clang": "cc-compiler-x86_64-unknown-freebsd",
+        "x86_64-unknown-cloudabi": ":cc-compiler-x86_64-unknown-cloudabi",
+        "darwin": "cc-compiler-x86_64-apple-darwin",
+        "freebsd": "cc-compiler-x86_64-unknown-freebsd",
+        "k8": "cc-compiler-x86_64-unknown-linux-gnu",
     },
     visibility = ["//visibility:public"],
 )
@@ -22,6 +23,12 @@ config_setting(
     visibility = ["//visibility:public"],
 )
 
+config_setting(
+    name = "host_x86_64_unknown_linux_gnu",
+    values = {"host_cpu": "k8"},
+    visibility = ["//visibility:public"],
+)
+
 filegroup(
     name = "compiler_files",
     srcs = [
@@ -32,6 +39,7 @@ filegroup(
     ] + select({
         ":host_x86_64_apple_darwin": ["@org_llvm_llvm_x86_64_apple_darwin//:bin/clang-7"],
         ":host_x86_64_unknown_freebsd": ["@org_llvm_llvm_x86_64_unknown_freebsd//:bin/clang-7"],
+        ":host_x86_64_unknown_linux_gnu": ["@org_llvm_llvm_x86_64_unknown_linux_gnu//:bin/clang-7"],
     }),
 )
 
@@ -51,6 +59,11 @@ filegroup(
             "@org_llvm_llvm_x86_64_unknown_freebsd//:bin/clang-7",
             "@org_llvm_llvm_x86_64_unknown_freebsd//:bin/lld",
             "@org_llvm_llvm_x86_64_unknown_freebsd//:bin/llvm-ar",
+        ],
+        ":host_x86_64_unknown_linux_gnu": [
+            "@org_llvm_llvm_x86_64_unknown_linux_gnu//:bin/clang-7",
+            "@org_llvm_llvm_x86_64_unknown_linux_gnu//:bin/lld",
+            "@org_llvm_llvm_x86_64_unknown_linux_gnu//:bin/llvm-ar",
         ],
     }),
 )
@@ -109,6 +122,22 @@ cc_toolchain(
     strip_files = ":empty",
     supports_param_files = 0,
     toolchain_identifier = "x86_64-unknown-freebsd",
+    visibility = ["//visibility:public"],
+)
+
+cc_toolchain(
+    name = "cc-compiler-x86_64-unknown-linux-gnu",
+    all_files = ":empty",
+    compiler_files = ":empty",
+    cpu = "x86_64-unknown-linux-gnu",
+    dwp_files = ":empty",
+    dynamic_runtime_libs = [":empty"],
+    linker_files = ":empty",
+    objcopy_files = ":empty",
+    static_runtime_libs = [":empty"],
+    strip_files = ":empty",
+    supports_param_files = 0,
+    toolchain_identifier = "x86_64-unknown-linux-gnu",
     visibility = ["//visibility:public"],
 )
 
