Rework cc_binary_cloudabi() and cc_test_cloudabi().
- Add an intermediate library to cc_binary_cloudabi() to prevent
  internal cloudlibc headers from trickling into builds.
- Extend cc_test_cloudabi() to actually run a unit testing executable.
  This currently assumes native execution, meaning execution is
  limited to FreeBSD.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -155,3 +155,10 @@ cc_library(
         "@org_musl_libc_musl//src/math",
     ],
 )
+
+cc_binary(
+    name = "run_test",
+    srcs = ["run_test.c"],
+    visibility = ["//visibility:public"],
+    deps = ["@org_cloudabi_cloudabi_utils//src/libcloudabi"],
+)
